--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,6 +11,7 @@ import BreakpointIndicator from "./components/widgets/BreakpointIndicator.astro"
 import GlobalScripts from "./components/widgets/GlobalScripts.astro";
 import PageLoader from "./components/utilities/PageLoader.astro";
 import config from ".astro/config.generated.json" with { type: "json" };
+import CookieBanner from "@/components/global/CookieBanner.astro";
 
 type Props = JSONLDProps & {
   className?: string;
@@ -45,6 +46,7 @@ const sectionSpacingClass =
     <Header {...props} />
     <main class:list={[sectionSpacingClass, Astro.props.class]}>
       <slot />
+      <CookieBanner />
     </main>
     <Footer />
 
