--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -8,6 +8,7 @@ import HomeBanner from "@/components/sections/HomeBanner.astro";
 import OurValue from "@/components/sections/OurValue.astro";
 import CallToAction from "@/components/sections/CallToAction.astro";
 import PricingSection from "@/components/sections/PricingSection.astro";
+import ServicesSection from "@/components/sections/ServicesSection.astro";
 import TestimonialSection from "@/components/sections/TestimonialSection.astro";
 
 export function getStaticPaths() {
@@ -22,6 +23,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
   <OurValue />
   <WhyUs />
   <PricingSection />
+  <ServicesSection />
   <TestimonialSection />
   <FaqSection content={homepage.data.faqSection} />
   <CallToAction />
