--- a/src/layouts/components/sections/ServicesSection.astro
+++ b/src/layouts/components/sections/ServicesSection.astro
@@ -4,8 +4,8 @@ import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import Subtitle from "../widgets/Subtitle.astro";
 import type { Section } from "@/types";
 import { markdownify } from "@/lib/utils/textConverter";
-import Tabs from "@/layouts/shortcodes/Tabs.astro";
-import Tab from "@/layouts/shortcodes/Tab.astro";
+import Tabs from "../widgets/Tabs.astro";
+import Tab from "../widgets/Tab.astro";
 
 type ServiceCTA = {
   label: string;
