--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -9,6 +9,7 @@ import OurValue from "@/components/sections/OurValue.astro";
 import CallToAction from "@/components/sections/CallToAction.astro";
 import PricingSection from "@/components/sections/PricingSection.astro";
 import TestimonialSection from "@/components/sections/TestimonialSection.astro";
+import MeetTheDuo from "@/components/sections/MeetTheDuo.astro";
 
 export function getStaticPaths() {
   return generatePaths();
@@ -21,6 +22,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
   <HomeBanner />
   <OurValue />
   <About />
+  <MeetTheDuo />
   <PricingSection />
   <TestimonialSection />
   <FaqSection content={homepage.data.faqSection} />
