--- a/src/layouts/components/widgets/AccordionList.astro
+++ b/src/layouts/components/widgets/AccordionList.astro
@@ -3,13 +3,12 @@ import Icons from "@/helpers/Icons.astro";
 import { markdownify } from "@/lib/utils/textConverter";
 
 interface Props {
-  changelogContent?: boolean;
   content: any[];
   class?: string;
   [key: string]: any;
 }
 
-const { content: list, changelogContent, ...rest } = Astro.props;
+const { content: list, ...rest } = Astro.props;
 ---
 
 <div {...rest}>
@@ -45,26 +44,7 @@ const { content: list, changelogContent, ...rest } = Astro.props;
                 "hs-accordion-content overflow-hidden transition-[height] duration-300",
                 !item.active && "hidden",
               ]}>
-              {changelogContent ? (
-                <div class="space-y-4 py-5">
-                  {item.list.map((item: any) => (
-                    <div class="space-y-4">
-                      <div class="bg-primary/10 inline-flex items-center gap-2 rounded-full px-2 py-1.5 text-xs">
-                        <div
-                          class={`changelog-badge h-3 w-3 rounded-full changelog-badge-${item.color}`}
-                        />
-                        {markdownify(item.label)}
-                      </div>
-                      <div set:html={markdownify(item.content)} />
-                    </div>
-                  ))}
-                </div>
-              ) : (
-                <div
-                  class="prose-styles py-5"
-                  set:html={markdownify(item.content, true)}
-                />
-              )}
+              <div class="prose-styles py-5" set:html={markdownify(item.content, true)} />
             </div>
           </div>
         );
